2010-12-14  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/Foundation.h:
	* Source/GNUmakefile: Include NSCalendar.
	* configure.ac: Check for unicode/ucal.h.
	* Headers/Foundation/NSCalendar.h:
	* Source/NSCalendar.m: Add completely empty NSCalendar and
	NSDateCompoennts classes.
	
2010-12-14  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Initialize _components before using it and initilize
	allLocales class variable in +initialize.  Also stop adding blank entries
	to _components dictionary.
	
2010-12-12  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSLocale.h: Added missing constant.
	* Source/NSLocale.m: Implemented more functionality.
	
2010-12-06  Riccardo Mottola

	* Source/NSPathUtilities.m:
	Make the Desktop directory relative to the user home.
	
2010-12-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Fix possible memory corruption when asked
	to base64 decode corrupt data with too many '=' characters.

2010-12-02  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSRegularExpression.m: Add a guard so this file isn't compiled
	if the ICU version is older than 4.4.

2010-11-29  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSPropertyList.h,
	* Source/NSPropertyList.m: Add a few OSX 10.6 methods.

2010-11-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Remove unnecessary include of Foundation.h
	* Source/Additions/GCDictionary.m: ditto
	* Source/Additions/GCObject.m: ditto
	* Source/Additions/GCArray.m: ditto
	* Source/Additions/GSXML.m: ditto
	* Source/Additions/GSFunctions.m: ditto
	* Source/Additions/GSObjCRuntime.m: ditto
	* Headers/Foundation/Foundation.h.install: obsolete file ... removed
	* Source/Makefile.postamble: Don't install obsolete Foundation.h.install
	header ... we no longer include Foundation.h anywhere so there's no
	need to protect against getting the installed version.

2010-11-19  Niels Grewe <niels.grewe@halbordnung.de>
